src/test/resources/predinline/errors/assert.vpr
inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(assert.failed:insufficient.permission)
    assert falze()
}